2024-04-18T16:10:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8741224123 # 194
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: last 14d: unq all: 4 12
* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 787 1252
* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 788 1254
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-18]

2024-04-18T00:37:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8730567385 # 192
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: last 14d: unq all: 4 10
* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 787 1251
* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 787 1252
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-17]

2024-04-17T08:11:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8718495001 # 190
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: last 14d: unq all: 4 9
* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 786 1250
* notice: next accum: outdated-unq outdated-all / unq all: 780 1242 / 787 1251
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-04-17]

2024-04-17T00:38:22Z: