@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-18T16:10:02Z",
-  "count_outdated" : 1242,
-  "uniques_outdated" : 780,
+  "timestamp" : "2024-04-19T08:11:13Z",
+  "count_outdated" : 1243,
+  "uniques_outdated" : 781,
   "count" : 1254,
   "uniques" : 788,
   "clones" : [
-    {
-      "timestamp": "2024-04-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-11T00:00:00Z",
       "count": 1,
