@@ -1,12 +1,7 @@
 {
-  "count": 12,
+  "count": 11,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-04-05T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-04-11T00:00:00Z",
       "count": 1,
