@@ -1,3 +1,12 @@
+2024-04-19T08:11:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8750466920 # 196
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-19
+* notice: last 14d: unq all: 4 11
+* notice: prev accum: outdated-unq outdated-all / unq all: 780 1242 / 788 1254
+* notice: next accum: outdated-unq outdated-all / unq all: 781 1243 / 788 1254
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-04-05] / []
+
 2024-04-18T16:10:02Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8741224123 # 194
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
